--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,17 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>springboot01</name>
   
+  <!-- Bill of material means possible combination of jars that goes well together -->
+  <!-- Embeded Tomcat Servlet Container -->
+  
+  <!-- parent section configures what version of jars to download -->
   <parent>
   	<groupId>org.springframework.boot</groupId>
   	<artifactId>spring-boot-starter-parent</artifactId>
   	<version>2.5.0</version>
   </parent>
   
+  <!-- dependencies section configures what jars to download -->
   <dependencies>
   	<dependency>
   		<groupId>org.springframework.boot</groupId>
